hphp/hack/test/typecheck/await_in_expressions7.php.exp
ERROR: File "await_in_expressions7.php", line 6, characters 10-17:
`await` cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
ERROR: File "await_in_expressions7.php", line 5, characters 3-46:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "await_in_expressions7.php", line 5, characters 11-12:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
